# nlp-tools

./: .gitignore  README.md  pyproject.toml
output/jupyter-notebook/: asr-dataset-recipe-builder-for-whisper.ipynb
src/asr_recipe/: adapters.py  analyses.py  cli.py  hf.py  materialize.py  models.py  parquet_reader.py  progress.py  recipe.py  registry.py  service.py  splits.py
tests/: conftest.py  test_adapters.py  test_analyses_no_audio.py  test_cli.py  test_hf_paths.py  test_materialize.py  test_push_dataset.py  test_recipe_snapshot.py  test_splits.py
