[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asr-recipe"
version = "0.1.0"
description = "Packaged CLI for exporting audio-gated ASR dataset recipes for Whisper workflows."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Ananse Labs" },
]
keywords = ["asr", "whisper", "speech", "huggingface", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fsspec>=2024.12.0",
  "huggingface_hub>=0.30.0",
  "pyarrow>=21.0.0",
  "requests>=2.32.0",
  "typer>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/fiifinketia/nlp-tools"
Repository = "https://github.com/fiifinketia/nlp-tools"
Issues = "https://github.com/fiifinketia/nlp-tools/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
asr-recipe = "asr_recipe.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
